@@ -1,5 +1,13 @@
 2022-07-13  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Recast
+	diagnostic message so that the user understands the consequence
+	of failure to locate a Type 1 font file (that isn't one of the
+	base 14 PostScript level 1 fonts): the font will be unavailable
+	for the "pdf" output device.
+
+2022-07-13  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Separate
 	lists of Type 1 font names with spaces as well as commas, for
 	better diagnostic message readability.  Also begin message in
